# todo-mcp-demo

./: README.md  pyproject.toml
src/todo/: __init__.py  app.py  database.py  mcp_server.py  models.py
